fixed scroll on mobile

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,8 @@
 html {
     font-size: 100%;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    height: 100vh;
 }
 
 *, *::before *::after {
@@ -15,6 +17,7 @@ body {
     font-family: 'Public Sans', sans-serif;
     color: $lightGray;
     line-height: 1.3;
+    height: 100%;
 }
 
 h1,h2,h3,h4,h5,h6 {
