--- a/app/scss/_mixin.scss
+++ b/app/scss/_mixin.scss
@@ -12,7 +12,7 @@ $breakpoints-down: ('small': "39.9375em", "medium": "63.9375em", "large": "87.43
 }
 
 @mixin breakpoint-down($size) {
-    @media (min-width: map-get($breakpoints-up, $size)) {
+    @media (max-width: map-get($breakpoints-down, $size)) {
         @content;
     }
 }
